--- a/Backend/kuku/src/main/resources/application.properties
+++ b/Backend/kuku/src/main/resources/application.properties
@@ -1,6 +1,2 @@
 spring.application.name=kuku
-spring.datasource.url=jdbc:mysql://localhost:3306/kukufm
-spring.datasource.username=root
-spring.datasource.password=Root
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.profiles.active=${ENV:dev}
